Build Beta 3.1 January 2 2011
* Added /reload command. Command accepts alias,popup,emoticon,sound to reload those config files on the fly
* Opening editor also reloads aliases and popup files from actual file


Build Beta 3 January 1 2011
* Added /play command to play WAV files in the Sounds folder
* Added /amsg command to send messages to all open channels for a server
* Added /joinserv command which can connect to a server and a channel /joinserv irc.server.com #channel
* Links that start with www now show as links
* Fixed bug with emoticons on lines that are wrapped
* The Updater should work properly now, closing IceChat and updating the files properly


Build Beta 2.2 - December 9 2010
* Fixed problem with trying to add submenu items to a seperator for the Popup Menus
* Added option to Display Settings to set the Opacity of the Main Window
* Server Tree shows current window more accurately when creating new windows


Build Beta 2.1 - December 4 2010
* Added option to Show/Hide Channel Bar


Build Beta 2 - December 4 2010
* Fixed problem with BeginWrite for Sending Data, added a sendBuffer Queue
* Fixed SSL Exception Error if the remote certificate is invalid
* Fixed problem with $color not parsing properly for single digit color codes
* Added option for Color Settings to reset color back to default setting
* Added an option for Server Settings, to allow it to accept invalid SSL certificates (in Extra Settings)
* Added for /server command, if a + in front of a port, will use SSL
* Added option to change Font for Docking Tabs
* Added option to change Font for Main Menu Bar
* Added option from Channel Popupmenu from Tabbar to change font for just that window
* Added popupmenu for channel bar for Channel List
* Added ServerError event to the Plugin Framework
* Added ServerMessage event to the Plugin Framework
* Added ServerNotice event to the Plugin Framework
* Added UserNotice event to the Plugin Framework
* Added ChannelKick event to the Plugin Framework